2008-11-03  kitone  <kitone@gna.org>

	* POTFILES.in:
	Remove RegEx files.

2008-11-02  kitone  <kitone@gna.org>

	* hu.po:
	* tr.po:
	* zh_CN.po:
	Update.

2008-10-13  kitone  <kitone@gna.org>

	* es.po:
	* pl.po:
	* zh_CN.po:
	Update.

2008-10-13  kitone  <kitone@gna.org>

	* cs.po:
	* fr.po:
	* subtitleeditor.pot:
	Update.

2008-10-10  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update with last files and messages.

2008-10-06  kitone  <kitone@gna.org>

	* fr.po:
	* subtitleeditor.pot:
	Update.

2008-09-25  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with new files.

2008-09-21  kitone  <kitone@gna.org>

	* fr.po:
	Update.

2008-09-20  kitone  <kitone@gna.org>

	* cs.po:
	* subtitleeditor.pot:
	Update.

2008-09-20  kitone  <kitone@gna.org>

	* subtitleeditor.pot:
	Update and fixes gtk-* strings.

2008-09-20  kitone  <kitone@gna.org>

	* POTFILES.in:
	Update with last files and messages.
	Add [encoding: UTF-8].
	
	* subtitleeditor.pot:
	Update with last files and messages.

2008-09-05  kitone  <kitone@gna.org>

	* zh_CN.po:
	Update by kaiman.

2008-09-04  kitone  <kitone@gna.org>

	* zh_CN.po:
	Update by kaiman.

2008-09-03  kitone  <kitone@gna.org>

	* cs.po:
	* fr.po:
	* subtitleeditor.pot:
	* zh_CN.po:
	Update translations.

2008-09-03  kitone  <kitone@gna.org>

	* POTFILES.in:
	* subtitleeditor.pot:
	Update with last files and msg.

2008-08-20  kitone  <kitone@gna.org>

	* cs.po:
	Update by Luboš Staněk.

2008-08-14  kitone  <kitone@gna.org>

	* README.translators:
	New file.

2008-08-14  kitone  <kitone@gna.org>

	* en_GB.po:
	Update.

2008-08-13  kitone  <kitone@gna.org>

	* cs.po:
	* fr.po:
	Update translations.

	* ca.po:
	* da.po:
	* de.po:
	* en_GB.po:
	* es.po:
	* gl.po:
	* hu.po:
	* it.po:
	* nl.po:
	* pl.po:
	* pt.po:
	* pt_BR.po:
	* pt_PT.po:
	* ru.po:
	* sr.po:
	* subtitleeditor.pot:
	* tr.po:
	* zh_CN.po:
	Update.

2008-08-13  kitone  <kitone@gna.org>

	* fr.po:
	Update by kitone.

2008-08-13  kitone  <kitone@gna.org>
