@@ -1,78 +1,78 @@
 [encoding: UTF-8]
-share/glade/dialog-change-framerate.glade
+plugins/actions/about/About.cc
+plugins/actions/adjusttime/AdjustTime.cc
+plugins/actions/applytranslation/ApplyTranslation.cc
+plugins/actions/changeframerate/ChangeFramerate.cc
+plugins/actions/changeframerate/dialog-change-framerate.glade
+plugins/actions/combinesubtitles/CombineSubtitles.cc
+plugins/actions/command/Command.cc
+plugins/actions/configurekeyboardshortcuts/ConfigureKeyboardShortcuts.cc
+plugins/actions/configurekeyboardshortcuts/dialog-configure-keyboard-shortcuts.glade
+plugins/actions/dialoguize/Dialoguize.cc
+plugins/actions/documentmanagement/DocumentManagement.cc
+plugins/actions/duplicatesubtitle/DuplicateSubtitle.cc
+plugins/actions/editcell/EditCell.cc
+plugins/actions/errorchecking/dialog-error-checking.glade
+plugins/actions/errorchecking/dialog-error-checking-preferences.glade
+plugins/actions/errorchecking/ErrorChecking.h
+plugins/actions/errorchecking/ErrorCheckingPlugin.cc
+plugins/actions/errorchecking/ErrorCheckingPreferences.h
+plugins/actions/errorchecking/MaxCharactersPerLine.h
+plugins/actions/errorchecking/MaxLinePerSubtitle.h
+plugins/actions/errorchecking/MinDisplayTime.h
+plugins/actions/errorchecking/MinGapBetweenSubtitles.h
+plugins/actions/errorchecking/Overlapping.h
+plugins/actions/errorchecking/TooLongDisplayTime.h
+plugins/actions/errorchecking/TooShortDisplayTime.h
+plugins/actions/extendlength/ExtendLength.cc
+plugins/actions/externalvideoplayer/dialog-external-video-player-preferences.glade
+plugins/actions/externalvideoplayer/ExternalVideoPlayer.cc
+plugins/actions/findandreplace/dialog-find-and-replace.glade
+plugins/actions/findandreplace/FindAndReplace.cc
+plugins/actions/insertsubtitle/InsertSubtitle.cc
+plugins/actions/italicize/Italicize.cc
+plugins/actions/joindocument/JoinDocument.cc
+plugins/actions/moveafterprecedingsubtitle/MoveAfterPrecedingSubtitle.cc
+plugins/actions/movesubtitles/dialog-move-subtitles.glade
+plugins/actions/movesubtitles/MoveSubtitles.cc
+plugins/actions/plaintext/PlainText.cc
+plugins/actions/preferences/dialog-preferences.glade
+plugins/actions/preferences/DocumentPage.h
+plugins/actions/preferences/ExtensionPage.h
+plugins/actions/preferences/InterfacePage.h
+plugins/actions/preferences/PreferencePage.h
+plugins/actions/preferences/PreferencesPlugin.cc
+plugins/actions/preferences/TimingPage.h
+plugins/actions/preferences/VideoPlayerPage.h
+plugins/actions/preferences/WaveformPage.h
+plugins/actions/removesubtitle/RemoveSubtitle.cc
+plugins/actions/reversetextandtranslation/ReverseTextAndTranslation.cc
+plugins/actions/scalesubtitles/dialog-scale-subtitles.glade
+plugins/actions/scalesubtitles/ScaleSubtitles.cc
+plugins/actions/selection/Selection.cc
+plugins/actions/spellchecking/dialog-spell-checking.glade
+plugins/actions/spellchecking/SpellChecking.cc
+plugins/actions/spellchecking/SpellChecking.h
+plugins/actions/splitdocument/dialog-split-document.glade
+plugins/actions/splitdocument/SplitDocument.cc
+plugins/actions/splitsubtitle/SplitSubtitle.cc
+plugins/actions/styleeditor/dialog-style-editor.glade
+plugins/actions/styleeditor/StyleEditor.cc
+plugins/actions/styleeditor/StyleEditor.h
+plugins/actions/timemodemanagement/TimeModeManagement.cc
+plugins/actions/videoplayermanagement/VideoPlayerManagement.cc
+plugins/actions/viewmanager/dialog-view-manager.glade
+plugins/actions/viewmanager/ViewManager.cc
+plugins/actions/wavefrommanagement/WaveformManagement.cc
 share/glade/dialog-character-codings.glade
-share/glade/dialog-configure-keyboard-shortcuts.glade
 share/glade/dialog-encodings-chooser.glade
-share/glade/dialog-error-checking.glade
-share/glade/dialog-error-checking-preferences.glade
 share/glade/dialog-export-text.glade
-share/glade/dialog-find-and-replace.glade
 share/glade/dialog-import-text.glade
-share/glade/dialog-move-subtitles.glade
 share/glade/dialog-open-document.glade
-share/glade/dialog-preferences.glade
 share/glade/dialog-save-document.glade
-share/glade/dialog-scale-subtitles.glade
 share/glade/dialog-script-properties.glade
-share/glade/dialog-spell-checking.glade
-share/glade/dialog-split-document.glade
-share/glade/dialog-style-editor.glade
-share/glade/dialog-view-manager.glade
 share/glade/subtitleeditor.glade
 share/subtitleeditor.desktop.in
-src/actions/About.cc
-src/actions/AdjustTime.cc
-src/actions/ApplyTranslation.cc
-src/actions/ChangeFramerate.cc
-src/actions/CombineSubtitles.cc
-src/actions/ConfigureKeyboardShortcuts.cc
-src/actions/DeleteSubtitleSelect.cc
-src/actions/Dialoguize.cc
-src/actions/DocumentManagement.cc
-src/actions/DuplicateSelectedSubtitles.cc
-src/actions/EditCell.cc
-src/actions/errorchecking/ErrorChecking.h
-src/actions/errorchecking/ErrorCheckingPlugin.cc
-src/actions/errorchecking/ErrorCheckingPreferences.h
-src/actions/errorchecking/MaxCharactersPerLine.h
-src/actions/errorchecking/MaxLinePerSubtitle.h
-src/actions/errorchecking/MinDisplayTime.h
-src/actions/errorchecking/MinGapBetweenSubtitles.h
-src/actions/errorchecking/Overlapping.h
-src/actions/errorchecking/TooLongDisplayTime.h
-src/actions/errorchecking/TooShortDisplayTime.h
-src/actions/ExtendLength.cc
-src/actions/ExternalVideoPlayer.cc
-src/actions/FindAndReplace.cc
-src/actions/InsertSubtitle.cc
-src/actions/Italicize.cc
-src/actions/JoinDocument.cc
-src/actions/MoveAfterPrecedingSubtitle.cc
-src/actions/MoveSubtitles.cc
-src/actions/preferences/DocumentPage.h
-src/actions/preferences/InterfacePage.h
-src/actions/preferences/PreferencePage.h
-src/actions/preferences/PreferencesPlugin.cc
-src/actions/preferences/PreviewPage.h
-src/actions/preferences/TimingPage.h
-src/actions/preferences/VideoPlayerPage.h
-src/actions/preferences/WaveformPage.h
-src/actions/ReverseTextAndTranslation.cc
-src/actions/ScaleSubtitles.cc
-src/actions/Selection.cc
-src/actions/SpellChecking.cc
-src/actions/SpellChecking.h
-src/actions/SplitDocument.cc
-src/actions/SplitSubtitle.cc
-src/actions/StyleEditor.cc
-src/actions/StyleEditor.h
-src/actions/TimeModeManagement.cc
-src/actions/Transcript.cc
-src/actions/TryToExtendToPerfect.cc
-src/actions/UndoRedo.cc
-src/actions/VideoPlayerManagement.cc
-src/actions/ViewManager.cc
-src/actions/WaveformManagement.cc
 src/Color.cc
 src/Color.h
 src/Command.cc
@@ -91,6 +91,14 @@ src/DocumentSystem.h
 src/Encodings.cc
 src/Encodings.h
 src/Error.h
+src/extension/Action.cc
+src/extension/Action.h
+src/Extension.cc
+src/Extension.h
+src/ExtensionInfo.cc
+src/ExtensionInfo.h
+src/ExtensionManager.cc
+src/ExtensionManager.h
 src/FileReader.cc
 src/FileReader.h
 src/FileWriter.cc
@@ -127,14 +135,12 @@ src/gui/SpinButtonTime.cc
 src/gui/SpinButtonTime.h
 src/gui/Statusbar.cc
 src/gui/Statusbar.h
+src/gui/TreeViewExtensionManager.cc
+src/gui/TreeViewExtensionManager.h
 src/main.cc
 src/Options.cc
 src/Options.h
 src/Player.h
-src/Plugin.cc
-src/Plugin.h
-src/PluginSystem.cc
-src/PluginSystem.h
 src/ScriptInfo.cc
 src/ScriptInfo.h
 src/Signal.cc
