@@ -1,3 +1,8 @@
+2008-11-10  kitone  <kitone@gna.org>
+
+	* POTFILES.in:
+	Update with new files.
+
 2008-11-03  kitone  <kitone@gna.org>
 
 	* POTFILES.in:
